--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-secondary{
+    @apply bg-secondary px-8 py-3 rounded-md text-white font-bold
+}
